Add more error code for POST template, generate swagger using: bee run --gendoc=true
