# wf-server/swagger/swagger.yml
@@ -264,8 +264,12 @@ paths:
       responses:
         "201":
           description: '{int} models.WfTemplate'
+        "400":
+          description: bad request
         "403":
           description: body is empty
+        "422":
+          description: invalid input
   /wf_template/{id}:
     get:
       tags:
@@ -367,8 +371,7 @@ definitions:
       Description:
         type: string
       Id:
-        type: integer
-        format: int64
+        type: string
       Name:
         type: string
       Version:
